--- a/16-10.Mai/content/auswertung.tex
+++ b/16-10.Mai/content/auswertung.tex
@@ -34,5 +34,5 @@ Aus den Steigungen $a$ der Fitts lassen sich durch Umformung der Gleichung \eqre
   \frac{e_0}{m_0} = \left( a \cdot \sqrt{8 U_\text{B}} )^2 \right)
   \label{eqn:e0m0}
 \end{equation}
-die spezifische Ladung der Elektronen berechnen. Die zu den zugehörigen Beschleunigungspannungen spezifische Ladungen sind in Tabelle \ref{tab:} mit ihrer realtiven Abweichung von ihrem Literaturwert \sample{spez} aufgetragen. 
+die spezifische Ladung der Elektronen berechnen. Die zu den zugehörigen Beschleunigungspannungen spezifische Ladungen sind in Tabelle \ref{tab:} mit ihrer realtiven Abweichung von ihrem Literaturwert %\sample{spez} aufgetragen. 
 
