--- a/16-10.Mai/content/theorie.tex
+++ b/16-10.Mai/content/theorie.tex
@@ -70,6 +70,7 @@ Mit $e_0$ als Elementarladung und $m_0$ als Elektronenmasse. \\
 Mit $v_0 = \sqrt{2 U_\text{B} \frac{e_0}{m_0}}$ und der Abbildung \eqref{fig:AblenkungB} folgt die Bestimmungsgleichung für die Ladung eines Elektrons zu:
 \begin{equation}
 	\frac{D}{L^2 + D^2} = \frac{1}{\sqrt{8 U_\text{B}}} \sqrt{\frac{e_0}{m_0}} B
+	\label{eqn:e0m}
 \end{equation}
 Mit der Verschiebung $D$ und dem Wirkungsbereichsa des Magnetfeldes $L$.
 
