--- a/16-10.Mai/lit.bib
+++ b/16-10.Mai/lit.bib
@@ -11,3 +11,10 @@
   year = 2016,
   address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V502.pdf},
 }
+
+@manual{spez,
+  author = {TU Dortmund},
+  title = {Versuch 502},
+  year = 2016,
+  address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V502.pdf},
+}
