--- a/16-10.Mai/content/auswertung.tex
+++ b/16-10.Mai/content/auswertung.tex
@@ -11,7 +11,7 @@ In Tabelle \ref{tab:DIS} sind die Stromstärken $I_\text{S}$ zu den Entsprechend
     1 &	0	&0	&0	&0	&0	\\
     2 &	0.27	&0.34	&0.37	&0.42	&0.41	\\
     3 &	0.63	&0.70	&0.74	&0.83	&0.85	\\
-    4 &	0.95	&1.05	&1.15	&1.25	&1.30	\\	
+    4 &	0.95	&1.05	&1.15	&1.25	&1.30	\\
     5 &	1.27	&1.40	&1.55	&1.61	&1.73	\\
     6 &	1.57	&1.76	&1.91	&2.01	&2.15	\\
     7 &	1.92	&2.11 	&2.27	&2.47	&2.59	\\
@@ -22,7 +22,7 @@ In Tabelle \ref{tab:DIS} sind die Stromstärken $I_\text{S}$ zu den Entsprechend
   \caption{Auslenkung der Elektronen in Abhägigkeit des Spulenstroms bei unterschiedlichen Beschleunigungsspannungen}
   \label{tab:DIS}
 \end{table}
-Anhand derer lassen sich durch verwendung Gleichung \eqref{eqn:} die magnetischen Feldstärken errechnen. Diese werden in Diagramm \ref{fig:bfeld} gegen D/(L²+D²) aufgetragen sowie ein linearer Fit durch die Messpunkte gelegt. 
+Anhand derer lassen sich durch verwendung von Gleichung \eqref{eqn:BH} die magnetischen Feldstärken errechnen. Diese werden in Diagramm \ref{fig:bfeld} gegen $D/(L^2+D^2)$ aufgetragen sowie ein linearer Fit durch die Messpunkte gelegt.
 \begin{figure}
   \centering
   \includegraphics[height=7cm]{B-Feld.pdf}
@@ -34,7 +34,7 @@ Aus den Steigungen $a$ der Fitts lassen sich durch Umformung der Gleichung \eqre
   \frac{e_0}{m_0} = \left( a \cdot \sqrt{8 U_\text{B}} )^2 \right)
   \label{eqn:e0m0}
 \end{equation}
-die spezifische Ladung der Elektronen berechnen. Die zu den zugehörigen Beschleunigungspannungen spezifische Ladungen sind in Tabelle \ref{tab:e0m0} mit ihrer realtiven Abweichung von ihrem Literaturwert (\cite{spez}) aufgetragen. 
+die spezifische Ladung der Elektronen berechnen. Diese sind mit den zugehörigen Beschleunigungspannungen und ihrer relativen Abweichung von ihrem Literaturwert (\cite{spez}) in Tabelle \ref{tab:e0m0} aufgetragen.
 \begin{table}
   \centering
   \begin{tabular}{c| c c}
@@ -52,28 +52,28 @@ die spezifische Ladung der Elektronen berechnen. Die zu den zugehörigen Beschle
   \label{tab:e0m0}
 \end{table}
 \subsection{Intensität des Erdmagnetfeld}
-Für den Versuch iwir ein Inktlisationswinkel von 
+Für den Versuch wird ein Inktlisationswinkel von
 \begin{equation}
   \Phi_\text{Inc} = (\num{66 +-3})°
   \label{eqn:Inc}
-\end{equation} 
-gemmesen. Der Strom $I_\text{K}$ um das Magnetfeld der Erde mittels Helmholzspulen zu kompensieren beträgt 
+\end{equation}
+gemessen. Der Strom $I_\text{K}$ um das Magnetfeld der Erde mittels Helmholzspulen zu kompensieren beträgt
 \begin{equation}
   I_\text{K} = 0.27 \, \text{A} \ .
   \label{IK}
 \end{equation}
-Mit Formel \ref{eqn:} ergibt sich für den Strom $I_\text{K}$ ein magnetisches Feld von 
+Mit Formel \ref{eqn:BH} ergibt sich für den Strom $I_\text{K}$ ein magnetisches Feld von
 \begin{equation}
-  1.72 \cdot 10^{-5} \, \text{T} \ .
+  B_\text{Helm} = 1.72 \cdot 10^{-5} \, \text{T} \ .
   \label{eqn:Binc}
 \end{equation}
-Nach Bereinigung magnetischen Feldes von dem Inklisationswinkel ergibt sich eine Totalintesistät von 
+Nach Bereinigung des magnetischen Feldes von dem Inklisationswinkel ergibt sich eine Totalintesistät von
 \begin{equation}
-  4.34 \cdot 10^{-5} \, \text{T} \ .
+  B_\text{Erd} = 4.34 \cdot 10^{-5} \, \text{T} \ .
   \label{eqn:Berd}
 \end{equation}
 \subsection{Empfindlichkeit der Braunschen Röhre}
-In einem linearem Diagramm werden die Ablenksspannungen $U_\text{d}$ aus Tabelle \ref{tab:DIS} gegen die Verschiebung $D$ des Leuchtflecks aufgetragen.
+In einem linearen Diagramm werden die Ablenkspannungen $U_\text{d}$ aus Tabelle \ref{tab:DIS} gegen die Verschiebung $D$ des Leuchtflecks aufgetragen.
 \begin{table}
   \centering
   \begin{tabular}{c| c c c c c }
@@ -83,7 +83,7 @@ In einem linearem Diagramm werden die Ablenksspannungen $U_\text{d}$ aus Tabelle
     1 &	-20.02	&-25.21	&-28.00	&-32.19	&-28.00	\\
     2 &	-16.12	&-20.24	&-22.99	&-27.04	&-22.99	\\
     3 &	-12.64	&-16.07	&-18.05	&-21.16	&-18.05	\\
-    4 &	-8.88	&-12.18	&-12.65	&-15.28	&-12.65	\\	
+    4 &	-8.88	&-12.18	&-12.65	&-15.28	&-12.65	\\
     5 &	-5.10	&-7.59	&-7.51	&-9.58	&-7.51	\\
     6 &	-1.37	&-2.69	&-2.64	&-4.02	&-2.64	\\
     7 &	2.62	&2.04	&2.73	&2.17	&2.73	\\
@@ -91,7 +91,7 @@ In einem linearem Diagramm werden die Ablenksspannungen $U_\text{d}$ aus Tabelle
     9 &	10.44	&11.60	&13.57	&14.40	&13.57	\\
     \bottomrule
   \end{tabular}
-  \caption{Auslenkung der Elektronen in Abhägigkeit der Ablenkspannung bei unterschiedlichen Beschleunigungsspannungen}
+  \caption{Auslenkung der Elektronen in Abhängigkeit der Ablenkspannung bei unterschiedlichen Beschleunigungsspannungen}
   \label{tab:DIS}
 \end{table}
 \begin{figure}
@@ -100,25 +100,25 @@ In einem linearem Diagramm werden die Ablenksspannungen $U_\text{d}$ aus Tabelle
   \caption{Empfindlichkeit der Braunschen Röhre}
   \label{fig:empf}
 \end{figure}
-Es wird ein Fit durch die einzelnen Messpunkte gelegt anhand derer die Empfindlichkeit der Braunsche Röhre bestimmt wird. Diese wird in einem weiterem Diagramm gegen den Kehrwert der Beschleunigungsspannung aufgetragen.
+Es wird ein Fit durch die einzelnen Messpunkte gelegt anhand derer die Empfindlichkeit der Braunschen Röhre bestimmt wird. Diese wird in einem weiterem Diagramm gegen den Kehrwert der Beschleunigungsspannung aufgetragen.
 \begin{figure}
   \centering
-  \includegraphics[height=8cm]{E-Feld2.pdf}
+  \includegraphics[height=8cm]{E-Feld.pdf}
   \caption{<+caption text+>}
   \label{fig:<+label+>}
 \end{figure}
-Anhand der Steigung des weiteren Fits lässt sich die Kenngröße 
+Anhand der Steigung des weiteren Fits lässt sich die Kenngröße
 \begin{equation}
   K_\text{theo} = \frac{p L}{2 d} = \frac{0.019 \, \text{m} \cdot 0.143 \, \text{m}}{2 \cdot 0.006 \, \text{m}} = 22.6 \frac{1}{\text{m}}
   \label{eqn:Ktheo}
-\end{equation} 
-des Systems bestimmen. Der Fit liefert eine Kenngröße von 
+\end{equation}
+des Systems bestimmen. Der Fit liefert eine Kenngröße von
 \begin{equation}
   K_\text{Messung} = (\num{0.27 +- 0.01}) \, \frac{1}{m} \ .
   \label{Kmess}
 \end{equation}
 \subsection{Kathodenstrahl-Oszillograph}
-Die gemessene Frequenzverhältnisse sind in Tabelle \ref{eqn:} aufgeführt.
+Die gemessene Frequenzverhältnisse sind in Tabelle \ref{eqn:sync} aufgeführt.
 \begin{table}
   \centering
   \begin{tabular}{c c c}
@@ -133,7 +133,7 @@ Die gemessene Frequenzverhältnisse sind in Tabelle \ref{eqn:} aufgeführt.
   \caption{Synchronisationsfrequenzen}
   \label{tab:sync}
 \end{table}
-Aus Mittlung der mit dem Frequenzverhältniss multiplizierten gemessenen Frequenzen ergibt sich eine Mittlere Frequenz von 
+Aus Mittelung der mit dem Frequenzverhältnis multiplizierten gemessenen Frequenzen ergibt sich eine Mittlere Frequenz von
 \begin{equation}
   \overline{\nu_\text{Messung}} = \num{79.81 +- 0.05} \text{Hz}
   \label{eqn:numess}
