--- a/16-10.Mai/content/diskussion.tex
+++ b/16-10.Mai/content/diskussion.tex
@@ -1,2 +1,21 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Die aus dem Relevanten erechnete Messwerte sind in Tabelle \ref{tab:sum} aufgeführt.
+\begin{table}
+  \centering
+  \begin{tabular}{c| c c c}
+    \toprule
+	\multirow{2}{*}{0} & \multirow{2}{*}{Zu Messende Größe} & \multirow{2}{*}{Ermittelter Wert} & Relative Abweichung \\
+	& & & vom Theoriewert \\
+    \midrule
+    1& spezifische Ladung & $(\num{1.77 +- 0.02})10^{11}$ C/kg & 1 \%	\\
+    2& Erdmagnetfeld 	  &  4.34 \cdot $10^{-5}$ T       & 11 \% 	\\
+    3& Empfindlickeit Braunsche Röhre& $(\num{0.27 +- 0.01}) \frac{1}{m}$ & 19 \% \\
+    4& Frequenz der Sägezahnspannung& $(\num{79.81 +- 0.05})$ Hz & 0.2 \% \\
+    5& Schwellwert der Sägezahnspannung& $ (\num{6.0 +- 0.2}) V $& / \\
+    \bottomrule
+  \end{tabular}
+  \caption{Messergebnisse mit realtiven Abweichung}
+  \label{tab:sum}
+\end{table}
+Die Messung der Spezifische Ladung kann als gelungen gewertet werden, da der Messfehler im Rahmen der Unsicherheit der Praktikum liegts. Eine mögliche Ursache für die Messabweichung bei der Bestimmung des Erdmagnetfeld ist die geringe Anzahl an Messwerte, sowie das genaue justieren des Gegenfeldes. Es erweist sich als schwierig einen genauen Punkt auf dem Schirm zu definieren, da je nach Blickwinkel, dieser sich verschiebt. Die Empfindlichkeit der Braunschen Röhre kann nicht genau mit dem Theoriewert verglichen werden, da die Formel nicht der Geometrie der Ablenkkondensatoren entspricht. Sie wurden zum Vergleich als Plattenkondensatoren genähert. Die gemittelte Sägezahnfrequenz entspricht ziemlich genau der theoretischen und über die Scheitelwerte kann keine Aussage getroffen werden. 
