--- a/16-10.Mai/header.tex
+++ b/16-10.Mai/header.tex
@@ -118,6 +118,9 @@
 % Trennung von Wörtern mit Strichen
 \usepackage[shortcuts]{extdash}
 
+%ermöglicht Teilen von Tabellenzeilen
+\usepackage{multirow}
+
 \author{
   Maximilian Sackel%
   \texorpdfstring{
