--- a/16-10.Mai/lit.bib
+++ b/16-10.Mai/lit.bib
@@ -13,8 +13,8 @@
 }
 
 @manual{spez,
-  author = {TU Dortmund},
-  title = {Versuch 502},
+  author = {Helmholtz-Zentrum Potsdam},
+  title = {IGRF-Deklinationsrechner},
   year = 2016,
-  address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V502.pdf},
+  address = {http://www-app3.gfz-potsdam.de/Declinationcalc/},
 }
