--- a/16-10.Mai/content/auswertung.tex
+++ b/16-10.Mai/content/auswertung.tex
@@ -62,7 +62,7 @@ gemessen. Der Strom $I_\text{K}$ um das Magnetfeld der Erde mittels Helmholzspul
   I_\text{K} = 0.27 \, \text{A} \ .
   \label{IK}
 \end{equation}
-Mit Formel \ref{eqn:BH} ergibt sich für den Strom $I_\text{K}$ ein magnetisches Feld von
+Mit Formel \eqref{eqn:BH} ergibt sich für den Strom $I_\text{K}$ ein magnetisches Feld von
 \begin{equation}
   B_\text{Helm} = 1.72 \cdot 10^{-5} \, \text{T} \ .
   \label{eqn:Binc}
@@ -134,12 +134,19 @@ Die gemessene Frequenzverhältnisse sind in Tabelle \ref{tab:sync} aufgeführt.
   \caption{Synchronisationsfrequenzen}
   \label{tab:sync}
 \end{table}
-Aus Mittelung der mit dem Frequenzverhältnis multiplizierten gemessenen Frequenzen ergibt sich eine Mittlere Frequenz von
+Ein Bild einer stehenden Welle ist in Abbildung \ref{fig:pic} zu sehen.
+\begin{figure}
+  \centering
+  \includegraphics[height=7cm]{picture/sinus.png}
+  \caption{Stehende Sinuswelle}
+  \label{fig:pic}
+\end{figure}
+Aus Mittelung der mit dem Frequenzverhältnis multiplizierten gemessenen Frequenzen ergibt sich eine mittlere Frequenz von
 \begin{equation}
   \overline{\nu_\text{Messung}} = \num{79.81 +- 0.05} \text{Hz}
   \label{eqn:numess}
 \end{equation}
-Desweiteren soll der Schwellwert der Spannung $U_\text{B}$ werden. Da die Empfindlichkeit der Röhre bereits bekannt ist, ergibt dieser sich durch Umformen der Gleichung \ref{eqn:DUd} nach $U_d$ zu
+Desweiteren soll der Schwellwert der Spannung $U_\text{B}$ werden. Da die Empfindlichkeit der Röhre bereits bekannt ist, ergibt dieser sich durch Umformen der Gleichung \eqref{eqn:DUd} nach $U_d$ zu
 \begin{equation}
   U_\text{d} = \frac{D 2 d U_\text{B}}{p L} \ .
   \label{eqn:dfs}
