--- a/16-10.Mai/content/theorie.tex
+++ b/16-10.Mai/content/theorie.tex
@@ -31,6 +31,7 @@ wobei $U_\text{d}$ der Ablenkspannung entspricht. \\
 Unter Betrachtung der Geschwindigkeitskomponenten, dem Winkel $\theta$ der Richtungsänderung und der Abbildung \eqref{fig:AblenkungE} ergibt sich für die Verschiebung $D$:
 \begin{equation}
 	D = L\theta = \frac{p L U_\text{d}}{2 d U_\text{B}} \propto U_\text{d}
+	\label{eqn:DUd}
 \end{equation}
 Mit dem Abstand $L$ zwischen Kondensator und Nachweissystem. \\
 
