--- a/13-19.April/content/auswertung.tex
+++ b/13-19.April/content/auswertung.tex
@@ -1,6 +1,5 @@
 \section{Auswertung}
 \label{sec:Auswertung}
-
 Der zu Beginn ausgemessene Abstand $L$ von dem Spalt zu der Photodiode und die Wellenlänge des verwendeten Lasers sind:
 \begin{align*}
   L &= 0.93 \ \text{m} \\
@@ -86,30 +85,14 @@ und wird für alle Messungen als konstant angesehen. Mithilfe der Gleichungen (\
   \caption{Ausgleichsrechnung zum dünnen Einzelspalt.}
   \label{fig:Einzel1}
 \end{figure}
-
-Die Herstellerangabe für die Spaltbreite $b$ von dem dünnen Einzelspalt ist:
+Aus dem Fit für den dünnen Einzelspalt ergeben sich die Spaltbreite $b_\text{Beu}$ und die Normierungskonstante $A$:
 \begin{align*}
-  b_\text{Her} = 7.5 \cdot 10^{-5} \ \text{m}
-\end{align*}
-Die errechnete Spaltbreite $b$ für den dünnen Einzelspalt ist:
-\begin{align*}
-  b_\text{Beugung} = (\num{5.19 +- 0.05}) \cdot 10^{-5} \ \text{m}
-\end{align*}
-und die Normierungskonstante $A$:
-\begin{align*}
-  A = (\num{6.29 +- 0.05}) \ .
-\end{align*}
-Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Beugung}$ beträgt:
-\begin{align*}
-  \frac{b_\text{Her}-b_\text{Beugung}}{b_\text{Beugung}} \cdot 100 = 44.50 \ \%
+  b_\text{Beu} & = (\num{5.19 +- 0.05}) \cdot 10^{-5} \, \text{m} \\
+  A & = (\num{6.29 +- 0.05}) \, \frac{1}{\text{m}}
 \end{align*}
 Die gemessene Spaltbreite $b$ mit Hilfe eines Mikroskops beträgt:
 \begin{align*}
-  b_\text{Mikroskop} = 7.22 \cdot 10^{-5} \ \text{m}
-\end{align*}
-Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Mikroskop}$ beträgt:
-\begin{align*}
-  \frac{b_\text{Her}-b_\text{Mikroskop}}{b_\text{Mikroskop}} \cdot 100 = 3.88 \ \%
+  b_\text{Mikro} = 7.22 \cdot 10^{-5} \, \text{m}
 \end{align*}
 
 
@@ -121,31 +104,15 @@ Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Mikroskop}$ betr
   \label{fig:Einzel2}
 \end{figure}
 
-Die Herstellerangabe für die Spaltbreite $b$ von dem mittleren Einzelspalt ist:
+Aus dem Fit für den mittleren Einzelspalt ergeben sich die Spaltbreite $b_\text{Beu}$ und die Normierungskonstante $A$:
 \begin{align*}
-  b_\text{Her} = 15.0 \cdot 10^{-5} \ \text{m}
-\end{align*}
-Die errechnete Spaltbreite $b$ für den mittleren Einzelspalt ist:
-\begin{align*}
-  b_\text{Beugung} = (\num{11.57 +- 0.65}) \cdot 10^{-5} \ \text{m}
-\end{align*}
-und die Normierungskonstante $A$:
-\begin{align*}
-  A = (\num{8.69 +- 0.39}) \ .
-\end{align*}
-Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Beugung}$ beträgt:
-\begin{align*}
-  \frac{b_\text{Her}-b_\text{Beugung}}{b_\text{Beugung}} \cdot 100 = 30.34 \ \%
+  b_\text{Beu} & = (\num{11.57 +- 0.65}) \cdot 10^{-5} \ \text{m} \\
+  A & = (\num{8.69 +- 0.39}) \, \frac{1}{\text{m}}
 \end{align*}
 Die gemessene Spaltbreite $b$ mit Hilfe eines Mikroskops beträgt:
 \begin{align*}
-  b_\text{Mikroskop} = 13.3 \cdot 10^{-5} \ \text{m}
+  b_\text{Mikro} = 13.3 \cdot 10^{-5} \ \text{m}
 \end{align*}
-Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Mikroskop}$ beträgt:
-\begin{align*}
-  \frac{b_\text{Her}-b_\text{Mikroskop}}{b_\text{Mikroskop}} \cdot 100 = 12.78 \ \%
-\end{align*}
-
 
 \subsection{Ausgleichsrechnung zum dicken Einzelspalt}
 \begin{figure}[H] %Einzelspalt dick
@@ -155,31 +122,15 @@ Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Mikroskop}$ betr
   \label{fig:Einzel3}
 \end{figure}
 
-Die Herstellerangabe für die Spaltbreite $b$ von dem dicken Einzelspalt ist:
+Aus dem Fit für den mittleren Einzelspalt ergeben sich die Spaltbreite $b_\text{Beu}$ und die Normierungskonstante $A$:
 \begin{align*}
-  b_\text{Her} = 40.0 \cdot 10^{-5} \ \text{m}
-\end{align*}
-Die errechnete Spaltbreite $b$ für den dicken Einzelspalt ist:
-\begin{align*}
-  b_\text{Beugung} = (\num{24.47 +- 1.03}) \cdot 10^{-5} \ \text{m}
-\end{align*}
-und die Normierungskonstante $A$:
-\begin{align*}
-  A = (\num{13.85 +- 0.34}) \ .
-\end{align*}
-Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Beugung}$ beträgt:
-\begin{align*}
-  \frac{b_\text{Her}-b_\text{Beugung}}{b_\text{Beugung}} \cdot 100 = 63.47 \ \%
+  b_\text{Beu} & = (\num{24.47 +- 1.03}) \cdot 10^{-5} \ \text{m} \\
+  A & = (\num{13.85 +- 0.34}) \, \frac{1}{\text{m}}
 \end{align*}
 Die gemessene Spaltbreite $b$ mit Hilfe eines Mikroskops beträgt:
 \begin{align*}
-  b_\text{Mikroskop} = 40.0 \cdot 10^{-5} \ \text{m}
+  b_\text{Mikro} = 40.0 \cdot 10^{-5} \ \text{m}
 \end{align*}
-Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Mikroskop}$ beträgt:
-\begin{align*}
-  \frac{b_\text{Her}-b_\text{Mikroskop}}{b_\text{Mikroskop}} \cdot 100 = 0.00 \ \%
-\end{align*}
-
 
 \subsection{Ausgleichsrechnung zum Doppelspalt}
 \begin{figure}[H] %Doppelspalt
@@ -189,24 +140,11 @@ Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Mikroskop}$ betr
   \label{fig:Doppel}
 \end{figure}
 
-Die Herstellerangabe für die Spaltbreite $b$ und den Spaltabstand $s$ vom Doppelspalt sind:
-\begin{align*}
-  b_\text{Her} = 10.0 \cdot 10^{-5} \ \text{m} \\
-  s_\text{Her} = 40.0 \cdot 10^{-5} \ \text{m} \ .
-\end{align*}
 Die errechnete Spaltbreite $b$ für den Doppelspalt ist:
 \begin{align*}
-  b_\text{Beugung} = (\num{29.5201 +- 0.0031}) \cdot 10^{-5} \ \text{m}
+  b_\text{Beu} = (\num{29.5201 +- 0.0031}) \cdot 10^{-5} \ \text{m}
 \end{align*}
 und der Spaltabstand $s$:
 \begin{align*}
-  s_\text{Beugung} = (\num{29.5184 +- 0.0025}) \cdot 10^{-5} \ .
-\end{align*}
-Die Prozentuale Abweichung zwischen $b_\text{Her}$ und $b_\text{Beugung}$ beträgt:
-\begin{align*}
-  \frac{b_\text{Her}-b_\text{Beugung}}{b_\text{Beugung}} \cdot 100 = -66.12 \ \%
-\end{align*}
-und für die Abweichung zwischen $s_\text{Her}$ und $s_\text{Beugung}$ folgt:
-\begin{align*}
-  \frac{s_\text{Her}-s_\text{Beugung}}{s_\text{Beugung}} \cdot 100 = 35.51 \ \%
+  s_\text{Beu} = (\num{29.5184 +- 0.0025}) \cdot 10^{-5} \ .
 \end{align*}
