--- a/13-19.April/content/theorie.tex
+++ b/13-19.April/content/theorie.tex
@@ -16,7 +16,7 @@ Anhand des Huygensschen Prinzip lässt sich bei hinreichend großer Intensität 
 \end{figure}
 Es wird eine ebene Welle mit der Feldstärke
 \begin{equation}
-  A(z,t)= A_0 \textbf{exp} \left( i \left( \omega t - \frac{2 \pi z}{\lambda}   \right) \right)
+  A(z,t)= A_0 \textbf{exp} \left(i \left( \omega t - \frac{2 \pi z}{\lambda}   \right) \right)
   \label{eqn:welle}
 \end{equation}
 angenommen die durch den Spalt mit Breite $b$ einfällt. Der Phasenunteschied zweier Strahlen, mit dem Abstand $x$ beträgt:
@@ -41,4 +41,4 @@ Die Intensitätsverteilung $I(\phi)$ des Doppelspalts beruht darauf, das im Abst
 \end{equation}
 
 \subsection{Fehlerrechnung}
-Sämtliche Fehler und Fits werden im folgenden mit der Funktion "Lmfit" aus Python ausgeführt.
+Sämtliche Fehler und Fits werden im folgenden mit der Funktion "Lmfit" aus Python berechnet.
