--- a/15-03.Mai/content/diskussion.tex
+++ b/15-03.Mai/content/diskussion.tex
@@ -10,4 +10,4 @@ Die berechneten Exponenten aus dem Kapitel (\ref{sec:K}) weichen von dem Referen
 \end{align*}
 ab. \\
 Die Kathodentemperaturen aus den Kapiteln (\ref{sec:A}) und (\ref{sec:L}) stimmen in der Größenordnung überein und können somit als gelungene Messungen betrachtet werden. \\
-Der errechnete Mittelwert der Austrittsarbeit für Wolfram beträgt 4.782 eV und weicht damit um 5.8 \% von dem Literaturwert ab. Der Literaturwert für die Austrittsarbeit beträgt 4.5 eV.
+Der errechnete Mittelwert der Austrittsarbeit für Wolfram beträgt 4.782 eV und weicht damit um 5.8 \% von dem Literaturwert ab. Der Literaturwert für die Austrittsarbeit beträgt 4.54 eV (\cite{Wolfram}).
