Neues Protokoll erstellt

--- a/13-19.April/content/diskussion.tex
+++ b/13-19.April/content/diskussion.tex
@@ -1,6 +1,6 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Wie in den Tabellen \eqref{tab:Ergebnisse1} und \eqref{tab:Ergebnisse2} zu erkennen ist, liegen die errechneten Werte zwischen 30 \% und 70 \% von den Herstellerangaben entfernt. Diese Abweichungen können viele Gründe haben, zum Beispiel könnte der Abstand zwischen der Lichtquelle und dem Schirm bzw. dem Spalt und dem Schirm nicht groß genug gewählt worden sein. Auch war der verwendete Laser nicht stark genug, wodurch die Nebenmaxima sehr klein werden. Desweiteren hat das Wechseln der Messskala des Ampermeters Schwankungen der Stromstärke hervorgerufen und zu letzt wurde das Licht in dem Raum immer wieder an und aus gemacht wodurch Schwankungen in der Intensität aufgetreten sind. Aus diesen Gründen ist auch die Messung mit dem Mikroskop deutlich genauer. Die Abweichung für die Messung mit dem Mikroskop liegen zwischen 0 \% und 15 \%.
+Wie in den Tabellen \eqref{tab:Ergebnisse1} und \eqref{tab:Ergebnisse2} zu erkennen ist, liegen die errechneten Spaltbreiten zwischen 30 \% und 70 \% von den Herstellerangaben entfernt. Diese Abweichungen können viele Gründe haben, zum Beispiel könnte der Abstand zwischen der Lichtquelle und dem Schirm bzw. dem Spalt und dem Schirm nicht groß genug gewählt worden sein. Auch war der verwendete Laser nicht stark genug, wodurch die Nebenmaxima sehr klein werden. Desweiteren hat das Wechseln der Messskala des Ampermeters Schwankungen der Stromstärke hervorgerufen und zu letzt wurde das Licht in dem Raum immer wieder an und aus gemacht wodurch Schwankungen in der Intensität aufgetreten sind. Aus diesen Gründen ist auch die Messung mit dem Mikroskop deutlich genauer. Die Abweichung für die Messung mit dem Mikroskop liegen zwischen 0 \% und 15 \%.
 
 \begin{table}[H] %Ergebnisse für die Einzelspalte
   \centering
