--- a/15-03.Mai/header.tex
+++ b/15-03.Mai/header.tex
@@ -2,7 +2,7 @@
   bibliography=totoc,     % Literatur im Inhaltsverzeichnis
   captions=tableheading,  % Tabellenüberschriften
   titlepage=firstiscover, % Titelseite ist Deckblatt
-  parskip,
+  parskip,                % Zeile nach Absätzen ist nicht mehr eingerückt
 ]{scrartcl}
 
 % Paket float verbessern
